--- a/ui-01/src/layouts/home/home-layout.styles.scss
+++ b/ui-01/src/layouts/home/home-layout.styles.scss
@@ -4,8 +4,9 @@
   justify-content: flex-start;
   align-items: stretch;
   border: solid blue;
-  height: 100%;
+  height: 100vh;
   min-width: 100vw;
+  overflow: hidden;
 
   position: relative;
 
@@ -23,6 +24,15 @@
     align-items: stretch;
     border: solid rgb(185, 81, 81);
     min-width: 100%;
-    flex: 1 1;
+    flex: 1;
+    overflow-y: auto;
+    // max-height: calc(100vh - 270px); // Viewport height minus header and footer
+
+    -ms-overflow-style: none; // IE 10+
+    scrollbar-width: none; // Firefox
+
+    &::-webkit-scrollbar {
+      display: none; // Chrome, Safari, Opera
+    }
   }
 }
